Virtualização-atividade/questão1_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: pod1-container
    image: httpd:2.4.41-alpine
    ports:
    - containerPort: 80
  tolerations:
  - key: node-role.kubernetes.io/master
    operator: Equal
    effect: NoSchedule
  nodeSelector:
    node-role.kubernetes.io/master: ""
